Revision history for Perl extension Verilog::Language.

The contributors that suggested a given feature are shown in [].  [by ...]
indicates the contributor was also the author of the fix; Thanks!

* Verilog::Language 3.02****

****	Fix SystemVerilog parameterized defines with `` expansion,
	and fix extra whitespace inserted on substitution. [Vladimir Matveyenko]

****	Fix missing uwire keyword in Verilog::Language. [Jonathan David]

****	Fix parse error on min:typ:max delay pairs, bug34575. [Martin Scharrer]

* Verilog::Language 3.023 2008/02/12

****	Fix arrayed input/output pins.  [Thomas Ziller]

****	Fix "output reg unsigned" parse error.

* Verilog::Language 3.022 2008/01/15

***	Add ignoring of SystemVerilog enumerations.  [Thomas Ziller]

****	Fix begin_keywords 1800-2005 error introduced in last release.

* Verilog::Language 3.021 2008/01/07

****	Fix endclass keyword parsing.  [David Plumb]

****	Fix "://" parsing as ":/" operator instead of comment. [Mark Nodine]

* Verilog::Language 3.020 2007/12/03

**	Add SystemVerilog logic types.  [Thomas Ziller]
	(SystemVerilog support is still a work in progress).

***	Add SystemVerilog operators += ## @@ :: etc.

***	Add specify operators &&& => *>.  [Mark Nodine]

***	Add SystemVerilog times (10ns, etc).

****	Fix concatenates in for loop assignments.  [Mark Nodine]

****	Fix endmodule/endfunc callback line numbers.

* Verilog::Language 3.013 2007/10/18

****	Fix parsing module #(parameter x,y) declarations. [Oleg Rodionov]

****	Fix parsing system functions with empty parens. [Oleg Rodionov]

****	Fix Verilog::Netlist errors having wrong line number. [Oleg Rodionov]

* Verilog::Language 3.012 2007/09/10

**	Added Verilog::EditFiles module and vsplitmodule example.

* Verilog::Language 3.011 2007/07/31

***	Added event trigger -> operator. [Mark Nodine]

****	Remove preprocessor adding newlines before `line. [Mark Nodine]

* Verilog::Language 3.010 2007/07/18

***	Added Parser::endparse callback. [Mark Nodine]
